# honesty-rubric-eval

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  english-only.yml
audit/: experience_eval.md  experience_kcurve.md  rubric_eval.md
data/: README.md  gold_scores.yaml  gold_scores_b.example.yaml  items.yaml
docs/: what-is-out-of-scope.md
rubric/: honesty_rubric.yaml
scripts/: check_english_only.py  inter_rater.py  run_experience_eval.py  run_rubric_eval.py
src/honesty_eval/: __init__.py  audit.py  backends.py  bootstrap.py  dataset.py  experience.py  judge.py  metrics.py  rubric.py
tests/: test_audit.py  test_backends.py  test_bootstrap.py  test_eval.py  test_judge.py
