[project]
name = "honesty-rubric-eval"
version = "0.2.0"
description = "Scalable-oversight eval: does an LLM judge match expert scores on a procedure-not-position honesty rubric? Reports quadratic-weighted κ with a bootstrap CI and a per-epistemic-class (fact/consensus/contested) breakdown."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "H. Ryan Kim" }]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honesty_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
